Bug #1532510 by ezra-g: Anonymous frontpage overflow issues

--- a/themes/commons_origins/css/commons_origins-style.css
+++ b/themes/commons_origins/css/commons_origins-style.css
@@ -3417,6 +3417,10 @@ padding: 10px;
 margin: 0px 10px 10px;
 }
 
+#block-views-homepage_group_showcase-block_1 {
+  width: 640px;
+  margin-left: -10px;
+}
 /* a fix by Jay (read "Untrained themer") to line up the text in the Latest Notices block on /home */
 .view-recent-notices .views-field-name { margin-left: 40px; }
 
